<resources>
    <string name="app_name">ETDF</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="declaration">\t\t I hereby confirm that I understand the tax rates / tax benefits that are applicable and submitting my declaration of Tax Regime for the Financial year 2020-21</string>
    <string name="Empdeclaration">Employee Declaration</string>
    <string name="guidelines">"In the Budget 2020, the Government of India has proposed a personal income tax regime. This is optional and you can choose to follow either the existing income tax regime or the new one. \n\n To help you make the right choice,\n\n1. The following table show the tax rates as mentioned in the point. Please study the information carefully and choose the right tax regime for you.\n2. Use the Dynamic Tax Calculator in the ESS portal to calculate the tax liability of the two regimes.\n3. Refer the videos and read the FAQ's on the new budget in the Downloads section of the ESS site.\n4. After you decide on a tax regime to follow, submit the declaration of your choice on the right side of this page.\n5. Once the option is updated, you can proceed further to submit your tax declarations applicable basis your Tax Regime.\n6. If you have joined the company before 1st April 2020, and don't choose a tax regime, the existing tax regime is considered by default.\n7. If you are a new joiner in the current month, your default Regime would be the Old Regime.\n "</string>
    <string name="declarationEroor">Please Enter one option</string>
    <string name="add_word">add</string>
    <string name="profile">My Profile</string>
    <string name="home">Home</string>
    <string name="PESrow1">1) Gross Salary Before exeption</string>
    <string name="PEStitle">Income From Previous Employer</string>
    <string name="PESrow2">2) Exeption under section 10 and 17</string>
    <string name="PESrow3">3) Proffessional Tax</string>
    <string name="PESrow4">4) Provident fund</string>
    <string name="PESrow5">5) Income Tax</string>
    <string name="HProw1">Income from House Property</string>
    <string name="HProw2">1) Income from self occupied property</string>
    <string name="HProw3">Income from Let-Out Property</string>
    <string name="HProw4">"a) Annual Letable Value/Rent "</string>
    <string name="HPrerow4">a) Annual Letable Value/Rent Received or Receivable</string>
    <string name="HPrerow5">b)   Less: Muncipal Taxes Paid During the Year</string>
    <string name="HPrerow6">c) Net Annual Value (a-b)</string>
    <string name="HPrerow7">d) Less : Deductions from Net Annual Value</string>
    <string name="HPrerow8">1) Standart Deduction @30% of Net Annual Value</string>
    <string name="HPrerow9">2) Interest on Housing Loan</string>
    <string name="HPrerow10">e) Income / Loss from Let-Out Property "</string>
    <string name="HPrerow11">Total Income / Loss from House Property</string>
    <string name="tax_slabs">Tax Slabs</string>
    <string name="newRegime">New Tax Regime</string>
    <string name="table1_column1">Income Slabs</string>
    <string name="table1_column2">Tax Rates</string>
    <string name="table1_row1_col2">where the total income does not exceed Rs 2,50,000/-</string>
    <string name="table1_row1_col3">NIL</string>
    <string name="table1_row2_col2">where the total income exceed Rs 2,50,000/ but does not exceed Rs 5,00,000/-</string>
    <string name="table1_row2_col3"><![CDATA[5% of the amount by which the total income exceeds Rs.2,50,000/- Rebate: maximum of Rs.12500/- where total income <= Rs.5,00,000/-]]></string>
    <string name="table1_row3_col2">where the total income exceed Rs 5,00,000/- but does not exceed Rs 10,00,000/-</string>
    <string name="table1_row3_col3">Rs.12,500/- + 20% of the amount by which the total income exceeds Rs.5,00,000/-</string>
    <string name="table1_row4_col3">where the total income exceed Rs 10,00,000/-</string>
    <string name="table1_row5_col2">Rs.112,500/- + 30% of the amount by which the total income exceeds Rs.10,00,000/-</string>
    <string name="table2_row1_col2">where the total income exceed Rs.50,00,000/- but does not exceed Rs.10,00,00,00/-</string>
    <string name="table2_row1_col3">10% of the Income tax or 70% of (taxable income - Rs.50,00,000), whichever is less.</string>
    <string name="table2_row2_col2">"where the total income exceed Rs.10,00,00,00/- but does not exceed Rs.20,00,00,00/- "</string>
    <string name="table2_row2_col3">15% of the Income tax or 70% of (taxable income - Rs.10,00,00,00) added with surcharges upto Rs.10,00,00,00 whichever is less.</string>
    <string name="table2_row3_col2">where the total income exceed Rs.20,00,00,00/- but does not exceed Rs.50,00,00,00/-</string>
    <string name="table2_row3_col3">25% of the Income tax or 70% of (taxable income - Rs.20,00,00,00) added with surcharges upto Rs.20,00,00,00 whichever is less.</string>
    <string name="table2_row4_col3">where the total income exceed Rs.50,00,00,00/-</string>
    <string name="table2_row5_col2">37% of the Income tax or 70% of (taxable income - Rs.50,00,00,00) added with surcharges upto Rs.50,00,00,00 whichever is less.</string>
    <string name="logout">Logout</string>
    <string name="table3_row1">Income From Other Sources</string>
    <string name="table3_row2_col1">Interest on savings (if exceeds Rs.10,000)/ other Interest / commission / etc</string>
    <string name="table3_row3_col1">Income from other sources</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="Tax_payable">Taxable Income</string>
    <string name="income_Tax_payable">Income Tax Payable</string>
    <string name="Surcharge">Surcharge</string>
    <string name="health"><![CDATA[Health & Education Cess @ 4%]]></string>
    <string name="incomehead1">Housing Loan/ Housing property/ Other Income</string>
    <string name="hd1row1Col1">1. House Property  \tIncome(Loss) - Let Out Property (Sec-24(b))</string>
    <string name="hd1row2col1">2. Interest On Housing   \tLoan - Self occupied Property (Sec  24(b))</string>
    <string name="hd1row12col2"><![CDATA[Annexure 3 - Letout Property & Self Occupied]]></string>
    <string name="hd1row3col1">3. Other Income (Bank Interest ,etc)</string>
    <string name="incomehead2">Previous Employment Income</string>
    <string name="hd2row1col1">1. Income recieved from previous emplyer salary</string>
    <string name="hd2row2col1">2. Professional Tax Recovered by previous employer</string>
    <string name="hd2row3col1">3. Provident fund contributed with previous employer</string>
    <string name="hd2row4col1">4. Tax paid outside salary / tax recovered by previous employer</string>
    <string name="tableDeductions_row1">Deductions</string>
    <string name="tableDeductions_row2_col1">Deductions from Gross Total Income</string>
    <string name="tableDeductions_hd_col2">Declared Amount</string>
    <string name="tableDeductions_hd_col3">Eligible</string>
    <string name="tabledeclaration_row1">1) Employee Provident Fund</string>
    <string name="tabledeclaration_row2">2) Voluntary Provident Fund</string>
    <string name="tabledeclaration_row3">3)  Provident Fund contributed with previous employer</string>
    <string name="tabledeclaration_row4">4) Deduction under life insurance pension scheme (80CCC)</string>
    <string name="tabledeclaration_row5">5) Public Provident Fund</string>
    <string name="tabledeclaration_row6">6) Children Education</string>
    <string name="tabledeclaration_row7">7) National Savings Certificate</string>
    <string name="tabledeclaration_row8">8) Accrued NSC Interest</string>
    <string name="tabledeclaration_row9">9) Life Insurance premium paid</string>
    <string name="tabledeclaration_row10">10) Housing Loan principal repayment</string>
    <string name="tabledeclaration_row11">11) Sukanya Samriddi Account</string>
    <string name="tabledeclaration_row12">12) Approved super annuation</string>
    <string name="deductionserror">Maximum total  deduction you can get is 1,50,000</string>
    <string name="basicsalary">Basic Salary</string>
    <string name="dearnessallowance">Dearness Allowance</string>
    <string name="hrarecieved">HRA Recieved per annum</string>
    <string name="totalrentpaid">Total Rent Paid</string>
    <string name="citytype">Do you live in a metro city ?</string>
    <string name="changeRegime">Update Regime</string>
    <string name="hraDisplayMonth">Month</string>
    <string name="hraDisplayLL">Land Lord Name</string>
    <string name="hraDisplayPancard">LandLord Pancard ID</string>
    <string name="hraDisplayLocation">Location Type(metro/non-metro)</string>
    <string name="hraDisplayReimbersedamount">Reimberced Amount</string>
    <string name="Update">Update</string>
    <string name="settings">SETTINGS</string>
    <string name="Taxcomputation">Tax Computation</string>
    <string name="oldRegime">Old Regime</string>
    <string name="NewRegime">New Regime</string>
    <string name="taxLiable">Total Tax Liabilty</string>
    <string name="conditionTochangeRegime">You can change the Regime type in settings</string>
    <string name="selfOccupied_property_heading">Self Occupied</string>
    <string name="co_applicant_declaration_heading">Declaration of Co-Applicant Details</string>
    <string name="letout_property_heading">Let Out</string>
    <string name="changePhoto"><u>Change Photo</u></string>
    <string name="clear">clear</string>
    <string name="savePhoto"><u>Save Photo</u></string>
    <string name="selfOccupied_text1">1) Are you Paying Interest on Housing Loan Which is Self-Occupied</string>
    <string name="selfOccupied_text2">2) Is the Property a Joint Property</string>
    <string name="selfOccupied_text3">3) What is the Percentage of your contribution towards Repayment of Loans. Applicable only if Point 2 is yes</string>
    <string name="selfOccupied_text4">4) Month and Year of completion of the Property</string>
    <string name="selfOccupied_text5">5) Interest repayment made in current year</string>
    <string name="selfOccupied_text6">6) Pre  EMI paid if any in the current year other than regular Interest repayment</string>
    <string name="selfOccupied_text7">7) Pre EMI -year 1</string>
    <string name="coapplicant_text1">Is there a co-applicant to your Housing Loan . If yes. Please Provide the name</string>
    <string name="coapplicant_text2">Co Applicant Name 1</string>
    <string name="coapplicant_text3">Co Applicant Name 2</string>
    <string name="noInternet">Please check your Internet Connection</string>
    <string name="letout_property_txt1">Is the Property Joint Property ?</string>
    <string name="letout_property_heading_txt2">"What is the percentage of your contribution towards repayment of Loan. "</string>
    <string name="letout_property_heading_txt1">Particulars</string>
    <string name="letout_property_heading_txt3">Property -1</string>
    <string name="letout_property_heading_txt4">Property - II</string>
    <string name="rentRecieved_letout">1) Rent recieved</string>
    <string name="municipaltaxes_letout">2) Less Municipal taxes actually paid - (2021-22)</string>
    <string name="letout_netannualValue">3) Net annual value (1-2)</string>
    <string name="letout_lstd30per">4) Less Standard Deduction (30% of NAV)</string>
    <string name="interestRepayment_letout">5) Interest Repayment in the current year</string>
    <string name="preemi_letout">6) Pre EMI paid if any in the current year other than regular interest repayment</string>
    <string name="letout_preemi1">7) Pre EMI - year I</string>
    <string name="letout_preemi2">8) Pre EMI -II</string>
    <string name="poweredBy">Powered by: <a href="http://www.ascent-online.com/">StoHRM</a>&#8482;</string>
    <string name="back">Back</string>
</resources>