<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SlabsFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Income Tax:"
            android:textSize="20dp"
            android:layout_margin="20dp"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"

            android:background="@drawable/shape"
            >

            <TableRow
                android:background="#727272">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/table1_column1"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/table1_column2"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:text="1" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table1_row1_col2" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table1_row1_col3"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:text="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table1_row2_col2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table1_row2_col3" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:text="3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table1_row3_col2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table1_row3_col3" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:text="4" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table1_row4_col3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table1_row5_col2" />
            </TableRow>

        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            >

            <TableRow
                android:background="#727272">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/table1_column1"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/table1_column2"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight=".1"

                    android:text="1"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table2_row1_col2" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table2_row1_col3"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight=".1"
                    android:text="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table2_row2_col2" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table2_row2_col3"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight=".1"
                    android:text="3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table2_row3_col2" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table2_row3_col3"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight=".1"
                    android:text="4" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table2_row4_col3" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/table2_row5_col2"
                    />
            </TableRow>

        </TableLayout>
        <Button
            android:id="@+id/okbutton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Ok"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
</ScrollView>